--- a/main.scss
+++ b/main.scss
@@ -13,6 +13,7 @@ https://codepen.io/sephhh/pen/OVpELO?editors=1010
 //animzione baletto
 https://stackoverflow.com/questions/52128997/how-to-create-canvas-class-with-javascript-es6
 
+//easin and animation
 //https://css-tricks.com/easing-animations-in-canvas/
 
 
