--- a/main.scss
+++ b/main.scss
@@ -19,7 +19,7 @@ https://stackoverflow.com/questions/52128997/how-to-create-canvas-class-with-jav
 
 */
 html {
-  opacity: 0;
+  //opacity: 0;
 }
 .hero-bg {
   width: 100%;
