--- a/main.scss
+++ b/main.scss
@@ -18,9 +18,12 @@ https://stackoverflow.com/questions/52128997/how-to-create-canvas-class-with-jav
 
 
 */
-
+.half {
+  width: 50% !important;
+}
 .hero-bg {
   width: 100%;
+
   height: 56vw;
   max-height: 100vh;
   background-color: antiquewhite;
